# sshegg

./: .gitignore  AGENTS.md  Cargo.toml  DEVLOG.md  README.md  build.rs  issues.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
assets/: cli.sample.json  ui.sample.json
assets/themes/: cyberpunk.json  dracula.json  gruvbox.json  monokai.json  nord.json  rose_pine.json  solarized.json  tokyo_night.json
docs/plans/: 2026-02-25-installation-design.md  2026-04-20-issue17-scp-path-autocomplete.md  2026-04-25-issue20-scp-remote-autocomplete-performance.md
docs/superpowers/specs/: 2026-03-21-unsafe-password-storage-design.md
scripts/: _devops.py  bump_version.py  dev.py  git_lint.py  install.sh  publish_release.py  show_issues.py  show_plans.py
scripts/completions/: se.bash  se.fish  se.zsh  ssher.bash  ssher.fish  ssher.zsh
src/: auth.rs  lib.rs  main.rs  model.rs  password.rs  ssh.rs
src/cli/: mod.rs  output.rs  theme.rs  theme_cmd.rs
src/store/: mod.rs  path.rs
src/ui/: config.rs  filter.rs  highlight.rs  mod.rs  ordering.rs  state.rs
tests/: cli.rs  cli_test.rs  devops_test.sh  e2e_go.rs  install_retry_test.sh  install_test.sh  session_ordering.rs  unsafe_password.rs
