[package]
name = "ssher"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = "4.5"
crossterm = "0.28.1"
directories = "5.0.1"
ratatui = "0.28.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.12.0"
