[package]
name = "ssher"
version = "0.5.8"
edition = "2024"
default-run = "se"

[[bin]]
name = "se"
path = "src/bin/se.rs"
test = false

[[bin]]
name = "ssher"
path = "src/bin/ssher.rs"
test = false

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = "4.5"
crossterm = "0.28.1"
directories = "5.0.1"
log = "0.4"
rpassword = "7.3"
ratatui = "0.28.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
base64 = "0.22"
ssh2 = "0.9.5"
keyring = "2.3"
libc = "0.2"
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.12.0"
temp-env = "0.3"
