[project]
name = "sshegg-devtools"
version = "0.1.0"
description = "Development scripts for the sshegg repository"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.uv]
package = false
